# hwinfo-online

./: .gitignore  .gitmodules  Dockerfile  README.md  \  build.sh  charttheme.css  dockerfile  index.html  index.js  package-lock.json  package.json  styles.css
.github/workflows/: azure-static-web-apps-delightful-river-0cec2b80f.yml  azure-static-web-apps-kind-flower-0c0f0160f.yml  ci.yml  docker-image.yml  sync-fork.yml
scripts/: index.js  resize-sidebar.js  sidebar.js  ui.js
scripts/parser/: Cargo.toml
scripts/parser/docs/: format.md
scripts/parser/src/: lib.rs  parser.rs
src/: index.html  index.js  manifest.json
src/scripts/: index.js  sidebar.js  ui.js  uploadDiv.js
src/scripts/parser/: .gitignore  Cargo.toml
src/scripts/parser/docs/: nom.md
src/scripts/parser/src/: lexer.rs  lib.rs  parser.rs
src/styles/: charttheme.css  style.css
styles/: charttheme.css  style.css
