[package]
name = "hwgv-parser"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://developer.mozilla.org/en-US/docs/WebAssembly/Rust_to_Wasm#wasm-pack
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tinyvec = { version = "1", features = ["alloc"]}
indexmap = "2"
encoding = "0.2"
nom = "7.1.3"
# zstd = { version = "0.13.1", features = ["wasm", "no_asm"], default-features = false }
color-eyre = "0.6.3"
